# fake_news_adversarial_attack

./: .flake8  .gitignore  README.md  attacker_configs.yaml  environment.yaml  example.params.yaml  params.yaml  pyproject.toml  setup.sh
attacks/: base.py  text_fooler.py  trivial.py
attacks/generative/: dataset.py  model.py  precompute_victim_logits.py  train.py  value_model.py
attacks/text_fooler/: precompute_neighbors.py  text_fooler.py
baseline/: dataset.py  generate_submission.py  model.py  train.py
checkpoints/: README.md
configs/: attacker_configs.yaml  model_configs.yaml
models/: README.md  base.py  base_dataset.py
models/baseline/: dataset.py  generate_submission.py  model.py  train.py  train_eval_split.py
models/welfake/: __init__.py  dataset.py  eval.py  model.py  train.py  train_eval_split.py
src/: dataset_utils.py  evaluate_attack.py  metrics.py  torch_utils.py  train_eval_split.py
visualizations/: cls_attention.py  shapley.py
